@@ -485,6 +485,7 @@ public class TestDataProvider {
 					project.getLatestRelease(), userInfo.getUser());
 			// germanContainer.createString("displayName").setString(germanName);
 			germanContainer.createString("name").setString(germanName);
+			germanContainer.createString("folderName").setString(germanName);
 			germanContainer.updateDisplayFieldValue();
 			folderNode.publish(getGerman(), getProject().getLatestRelease(), getUserInfo().getUser());
 		}
@@ -493,6 +494,7 @@ public class TestDataProvider {
 					project.getLatestRelease(), userInfo.getUser());
 			// englishContainer.createString("displayName").setString(englishName);
 			englishContainer.createString("name").setString(englishName);
+			englishContainer.createString("folderName").setString(englishName);
 			englishContainer.updateDisplayFieldValue();
 			folderNode.publish(getEnglish(), getProject().getLatestRelease(), getUserInfo().getUser());
 		}
