@@ -1,6 +1,6 @@
 {
  "data": [
-    { "name": "Vehicle Images"              , "project": "demo", "parent": "demo.basenode" ,   "tags": [], "schema": "folder" },
+    { "name": "Vehicle Images"              , "project": "demo", "parent": "demo.basenode" ,   "tags": [], "schema": "folder", "segmentFieldValue": "images"  },
     { "name": "Embraer Legacy 600 Image"    , "project": "demo", "parent": "Vehicle Images",   "tags": [], "schema": "vehicleImage", "bin": { "path": "images/embraer-legacy-600.jpg"           , "filename": "embraer-legacy-600.jpg"           , "contentType": "image/jpeg", "width": 1024, "height": 683, "sha512sum": "cfc918f247a31c6b442469c66145d89a12be23e88eeee4e303180fb0a923f46ea73b01fb12d2e873dc4a156ae83733a2937af578484f39730035679c092ca48e" } },
     { "name": "Indian Empress Image"        , "project": "demo", "parent": "Vehicle Images",   "tags": [], "schema": "vehicleImage", "bin": { "path": "images/Yacht_Indian_Empress.jpg"         , "filename": "yacht-indian-empress.jpg"         , "contentType": "image/jpeg", "width": 1024, "height": 913, "sha512sum": "a0d00d1d8bc601425c44012a2257f0d9081788ce886e81a14636d67a1c533dfdb6a37bd6be4923dad070a0f157a2cfcc687e7f41716a0e2fde338b945a4b7142" } },
     { "name": "Pelorus Image"               , "project": "demo", "parent": "Vehicle Images",   "tags": [], "schema": "vehicleImage", "bin": { "path": "images/yacht-pelorus.jpg"                , "filename": "yacht-pelorus.jpg"                , "contentType": "image/jpeg", "width": 1024, "height": 768, "sha512sum": "53470d9d2775e6411b7b3557794fa017cf0029cf39af153bcef20fd1e9ac12f8d5f2a2427299d3dd7655834179dea93a205503addf727090aa444d581e75b506" } },
@@ -12,21 +12,21 @@
     { "name": "Trabant Image"               , "project": "demo", "parent": "Vehicle Images",   "tags": [], "schema": "vehicleImage", "bin": { "path": "images/trabant.jpg"                      , "filename": "trabant.jpg"                      , "contentType": "image/jpeg", "width": 1024, "height": 576, "sha512sum": "e61745d9ae846e831420f2446bc257ca1c2ebbd9bd4668ed3de1705ebbf0cb01c590a110057b9b52b26941ff1090f8d0adf2a3b279c737c4bc6e1e2ce07ed126" } },
     { "name": "Space Shuttle Image"         , "project": "demo", "parent": "Vehicle Images",   "tags": [], "schema": "vehicleImage", "bin": { "path": "images/sts.jpg"                          , "filename": "sts.jpg"                          , "contentType": "image/jpeg", "width": 1024, "height": 683, "sha512sum": "cb53a633da0e2fc61855560eb1e63b7fc6403432ef4d2015b7d2994e0deabb248e0b4e2c2a31332d9bda073a3afb07a29dd236a825ba635bda077b24d715f53a" } },
 
-    { "name": "Automobiles"          , "project": "demo", "parent": "demo.basenode", "tags": [], "schema": "category" },
-    { "name": "Ford GT"              , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Ford GT Image"             , "SKU": 1, "weight": 1520, "price": 139995.00 , "stocklevel": 20    , "description": "The Ford GT is an American mid-engine two-seater sports car that was produced by Ford for the 2005 through 2006 model years." }, "tags": ["Gasoline", "Blue", "White"], "schema": "vehicle" },
-    { "name": "Tesla Roadster"       , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Tesla Roadster Image"      , "SKU": 2, "weight": 1305, "price": 101500.00 , "stocklevel": 20    , "description": "The Tesla Roadster is a battery electric vehicle (BEV) sports car produced by the electric car firm Tesla Motors in California between 2008 and 2012." }, "tags": ["Orange", "Electricity"], "schema": "vehicle" },
-    { "name": "Koenigsegg CXX"       , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Koenigsegg CCX Image"      , "SKU": 3, "weight": 1456, "price": 135000.00 , "stocklevel": 4     , "description": "The Koenigsegg CCX is a mid-engined sports car built by Koenigsegg Automotive AB." }, "tags": ["Gasoline", "Silver"], "schema": "vehicle" },
-    { "name": "Trabant"              , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Trabant Image"             , "SKU": 4, "weight":  600, "price":   3000.00 , "stocklevel": 40215 , "description": "The Trabant is a car that was produced by former East German auto maker VEB Sachsenring Automobilwerke Zwickau in Zwickau, Saxony" }, "tags": ["White", "Gasoline"], "schema": "vehicle" },
-    { "name": "Maize Blue Solar Car" , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Maize Blue Solar Car Image", "SKU": 5, "weight":  160, "price": 185000.12 , "stocklevel": 1     , "description": "The 1993 Maize & Blue solar car was built by the University of Michigan Solar Car Team during the period from 1990 to 1993." }, "tags": ["Blue", "Solar", "Electricity"], "schema": "vehicle" },
+    { "name": "Automobiles"          , "project": "demo", "parent": "demo.basenode", "tags": [], "schema": "category", "segmentFieldValue": "Automobiles" },
+    { "name": "Ford GT"              , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Ford GT Image"             , "SKU": 1, "weight": 1520, "price": 139995.00 , "stocklevel": 20    , "description": "The Ford GT is an American mid-engine two-seater sports car that was produced by Ford for the 2005 through 2006 model years." }, "tags": ["Gasoline", "Blue", "White"], "schema": "vehicle",  "segmentFieldValue": "Ford GT.html" },
+    { "name": "Tesla Roadster"       , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Tesla Roadster Image"      , "SKU": 2, "weight": 1305, "price": 101500.00 , "stocklevel": 20    , "description": "The Tesla Roadster is a battery electric vehicle (BEV) sports car produced by the electric car firm Tesla Motors in California between 2008 and 2012." }, "tags": ["Orange", "Electricity"], "schema": "vehicle",  "segmentFieldValue": "Tesla Roadster.html" },
+    { "name": "Koenigsegg CXX"       , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Koenigsegg CCX Image"      , "SKU": 3, "weight": 1456, "price": 135000.00 , "stocklevel": 4     , "description": "The Koenigsegg CCX is a mid-engined sports car built by Koenigsegg Automotive AB." }, "tags": ["Gasoline", "Silver"], "schema": "vehicle", "segmentFieldValue": "Koenigsegg CXX.html" },
+    { "name": "Trabant"              , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Trabant Image"             , "SKU": 4, "weight":  600, "price":   3000.00 , "stocklevel": 40215 , "description": "The Trabant is a car that was produced by former East German auto maker VEB Sachsenring Automobilwerke Zwickau in Zwickau, Saxony" }, "tags": ["White", "Gasoline"], "schema": "vehicle", "segmentFieldValue": "Trabant.html" },
+    { "name": "Maize Blue Solar Car" , "project": "demo", "parent": "Automobiles"  , "fields": { "vehicleImage": "Maize Blue Solar Car Image", "SKU": 5, "weight":  160, "price": 185000.12 , "stocklevel": 1     , "description": "The 1993 Maize & Blue solar car was built by the University of Michigan Solar Car Team during the period from 1990 to 1993." }, "tags": ["Blue", "Solar", "Electricity"], "schema": "vehicle", "segmentFieldValue": "Maize Blue Solar Car.html" },
 
-    { "name": "Aircraft"             , "project": "demo", "parent": "demo.basenode",   "tags": [], "schema": "category" },
-    { "name": "Embraer Legacy 600"   , "project": "demo", "parent": "Aircraft", "fields": { "vehicleImage": "Embraer Legacy 600 Image"  ,"SKU": 6, "weight": 16000 , "price":     27000000.00 , "stocklevel": 6, "description": "The Embraer Legacy 600 is a business jet derivative of the Embraer ERJ 145 family of commercial jet aircraft." }, "tags": ["Kerosene", "White"], "schema": "vehicle" },
-    { "name": "Gulfstream G550"      , "project": "demo", "parent": "Aircraft", "fields": { "vehicleImage": "Gulfstream G550 Image"     ,"SKU": 7, "weight": 21900 , "price":     42000000.00 , "stocklevel": 5, "description": "The Gulfstream G500 and G550 are business jet aircraft produced by General Dynamics' Gulfstream Aerospace unit in Savannah, Georgia." }, "tags": ["Kerosene", "White"], "schema": "vehicle" },
-    { "name": "Space Shuttle"        , "project": "demo", "parent": "Aircraft", "fields": { "vehicleImage": "Space Shuttle Image"       ,"SKU": 8, "weight": 22700 , "price": 192000000000.12 , "stocklevel": 0, "description": "The Space Shuttle was a partially reusable low Earth orbital spacecraft system operated by the U.S. National Aeronautics and Space Administration (NASA)." }, "tags": ["Black", "White", "Hydrogen"], "schema": "vehicle" },
+    { "name": "Aircraft"             , "project": "demo", "parent": "demo.basenode",   "tags": [], "schema": "category", "segmentFieldValue": "Aircraft"},
+    { "name": "Embraer Legacy 600"   , "project": "demo", "parent": "Aircraft", "fields": { "vehicleImage": "Embraer Legacy 600 Image"  ,"SKU": 6, "weight": 16000 , "price":     27000000.00 , "stocklevel": 6, "description": "The Embraer Legacy 600 is a business jet derivative of the Embraer ERJ 145 family of commercial jet aircraft." }, "tags": ["Kerosene", "White"], "schema": "vehicle", "segmentFieldValue": "Embraer Legacy 600.html" },
+    { "name": "Gulfstream G550"      , "project": "demo", "parent": "Aircraft", "fields": { "vehicleImage": "Gulfstream G550 Image"     ,"SKU": 7, "weight": 21900 , "price":     42000000.00 , "stocklevel": 5, "description": "The Gulfstream G500 and G550 are business jet aircraft produced by General Dynamics' Gulfstream Aerospace unit in Savannah, Georgia." }, "tags": ["Kerosene", "White"], "schema": "vehicle", "segmentFieldValue": "Gulfstream G550.html" },
+    { "name": "Space Shuttle"        , "project": "demo", "parent": "Aircraft", "fields": { "vehicleImage": "Space Shuttle Image"       ,"SKU": 8, "weight": 22700 , "price": 192000000000.12 , "stocklevel": 0, "description": "The Space Shuttle was a partially reusable low Earth orbital spacecraft system operated by the U.S. National Aeronautics and Space Administration (NASA)." }, "tags": ["Black", "White", "Hydrogen"], "schema": "vehicle", "segmentFieldValue": "Space Shuttle.html" },
 
-    { "name": "Yachts"               , "project": "demo", "parent": "demo.basenode", "tags": [], "schema": "category" },
-    { "name": "Indian Empress"       , "project": "demo", "parent": "Yachts", "fields": { "vehicleImage": "Indian Empress Image", "SKU":  9, "weight": 2271000.12, "price": 0 , "stocklevel": 1, "description": "Indian Empress is one of the larger private yachts in the world at 95 metres in length." }, "tags": ["Diesel", "White"], "schema": "vehicle" },
-    { "name": "Pelorus"              , "project": "demo", "parent": "Yachts", "fields": { "vehicleImage": "Pelorus Image"       , "SKU": 10, "weight": 5317000.22, "price": 0 , "stocklevel": 2, "description": "Pelorus is the world's nineteenth largest luxury yacht at 115 metres (377 ft) in length." }, "tags": ["White", "Diesel"], "schema": "vehicle" }
+    { "name": "Yachts"               , "project": "demo", "parent": "demo.basenode", "tags": [], "schema": "category", "segmentFieldValue": "Yachts" },
+    { "name": "Indian Empress"       , "project": "demo", "parent": "Yachts", "fields": { "vehicleImage": "Indian Empress Image", "SKU":  9, "weight": 2271000.12, "price": 0 , "stocklevel": 1, "description": "Indian Empress is one of the larger private yachts in the world at 95 metres in length." }, "tags": ["Diesel", "White"], "schema": "vehicle", "segmentFieldValue": "Indian Empress.html" },
+    { "name": "Pelorus"              , "project": "demo", "parent": "Yachts", "fields": { "vehicleImage": "Pelorus Image"       , "SKU": 10, "weight": 5317000.22, "price": 0 , "stocklevel": 2, "description": "Pelorus is the world's nineteenth largest luxury yacht at 115 metres (377 ft) in length." }, "tags": ["White", "Diesel"], "schema": "vehicle", "segmentFieldValue": "Pelorus.html" }
     
  ]
 }
