@@ -4,6 +4,8 @@
 
 == 0.9.9 (PENDING)
 
+icon:plus[] Demo: The demo data have been updated. The a folderName and fileName field has been added to the demo schemas.
+
 icon:plus[] GraphQL: Added micronode list handling. Previously it was not possible to handle micronode list fields.
 
 icon:check[] Core: The language fallback handling for node breadcrumbs has been fixed. Previously the default language was not automatically added to the handled languages.
